Attempt #1 to fix viewport issue on mobile devices and scrolling background

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ html {
   background-repeat:no-repeat;
   background-size: cover;
   background-position: center center;
-  background-attachment: fixed;
+  background-attachment: local;
   animation: scroll1 100s linear infinite;
 }
 
@@ -37,7 +37,7 @@ html {
   background-repeat:no-repeat;
   background-size: cover;
   background-position: center center;
-  background-attachment: fixed;
+  background-attachment: local;
   animation: scroll2 100s linear infinite;
 }
 
